[package]
name = "mini-iguana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = "0.12.3"
bytes = "1.6.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
